--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -305,7 +305,7 @@ All benchmarks in this section were performed on the Itasca HPC cluster at the M
 Figure~\ref{fig:stencil_query_old_and_new} demonstrates the performance of the $k$-D Tree and the fixed-grid method on increasing 3-D regular grid resolutions up to four million nodes. Both the current $k$-D Tree implementation (2012) and the original implementation (pre-2012) are shown in Figure~\ref{fig:sten_query_a} as evidence of the significant improvement in the latest release. For comparison, the C++ fixed-grid method is shown with two resolutions: $h_n = 50$ and $h_n=100$. On the bottom, Figure~\ref{fig:stencil_query_old_and_new} shows the associated speedups---defined as the ratio of time to compute $k$-D Tree stencils, over the time for the same stencil generation with a fixed-grid---achieved over the more efficient release of $kd$-Tree Matlab. These results cover the total time to build the data-structure and query all stencils. The test grid is generated in raster-order, as is the fixed-grid. 
 
 
-Prior to the 2012 improvements, the C++ implementation was over 130x faster for four million nodes. With the newer and more reasonable $k$-D Tree benchmarks, the fixed-grid method is only 2x faster in the best case shown here. Although 2x is not as impressive, it is a notable improvement. One issue in Figure~\ref{fig:stencil_query_old_and_new} is that the fixed-grid with $h_n=50$ is consistently more than twice as slow as the $k$-D Tree. This is due to under-resolved cells with 32 nodes per cell; $h_n=100$ has only 4 nodes per cell. For small $N$ the $k$-D Tree is faster than both resolutions of fixed grid due to over-resolution. As $N$ increases beyond one million nodes the $h_n=100$ fixed-grid loses ground on the $k$-D Tree due to under-resolution. 
+Prior to the 2012 improvements, the C++ implementation of our fixed-grid method was over 130x faster than the C++ $k$-D Tree implementation for four million nodes. With the newer and more reasonable $k$-D Tree benchmarks, the fixed-grid method is only 2x faster in the best case shown here. Although 2x is not as impressive, it is better than nothing at all. One issue in Figure~\ref{fig:stencil_query_old_and_new} is that the fixed-grid with $h_n=50$ is consistently more than twice as slow as the $k$-D Tree. This is attributed to under-resolved cells (i.e., cells containing a large number of nodes) with more than 32 nodes per cell; $h_n=100$ has only 4 nodes per cell. When $N$ is small the $k$-D Tree is faster than both resolutions of fixed grid due to over-resolution of the fixed grid, which results in queries searching through empty cells in order to find neighbors. As $N$ increases beyond one million nodes the $h_n=100$ fixed-grid loses ground on the $k$-D Tree due to under-resolution. 
 
 
 \begin{figure}
@@ -328,7 +328,7 @@ Prior to the 2012 improvements, the C++ implementation was over 130x faster for 
 \end{figure}
 
 
-Similar behavior is seen in Figure~\ref{fig:speedup_sphere} where the fixed-grid and $k$-D Tree are compared for various discretizations of the unit sphere. Each of the node sets described in Figure~\ref{fig:speedup_sphere} are discussed in Chapter~\ref{chap:rbffd_method} and available for download (\cite{BolligSphereGrids}). A range of resolutions are covered from a few hundred up to one million with some overlap. Each distribution (MD, Icosahedral, CVT) are generated differently and the nodes are naturally spatially sorted (icosahedral) or random (MD, CVT). Due to sorting in the fixed-grid method, node sets that are originally random exhibit more gain over $k$-D Tree. This is most evident in Figure~\ref{fig:speedup_sphere}, where different slopes appear for the segment corresponding to MD nodes and similar resolutions of Icosahedral nodes. The speedup curves for $h_n=50$ and $h_n=100$ demonstrate the dependence of fixed-grid method's success on the proper choice of $h_n$. When over-resolved (i.e., for $N < 10000$) the $k$-D Tree performs best. Under-resolution degrades performance rapidly starting at $N=100000$ for $h_n=50$, and $N=500000$ for $h_n=100$. 
+Similar behavior is seen in Figure~\ref{fig:speedup_sphere} where the fixed-grid and $k$-D Tree are compared for various discretizations of the unit sphere. Each of the node sets described in Figure~\ref{fig:speedup_sphere} are discussed in Chapter~\ref{chap:rbffd_method} and available for download (\cite{BolligSphereGrids}). A range of resolutions are covered from a few hundred up to one million with some overlap. Each distribution (MD, Icosahedral, CVT) are generated differently and the nodes are naturally spatially sorted (icosahedral) or random (MD, CVT). Due to sorting in the fixed-grid method, node sets that are originally random benefit more from the fixed-grid than quasi-regular node distributions. This is most evident in Figure~\ref{fig:speedup_sphere}, where different slopes appear for the segment corresponding to MD nodes and similar resolutions of Icosahedral nodes. The speedup curves for $h_n=50$ and $h_n=100$ demonstrate the dependence of fixed-grid method's success on the proper choice of $h_n$. When over-resolved (i.e., for $N < 10000$) the $k$-D Tree performs best. Under-resolution degrades performance rapidly starting at $N=100000$ for $h_n=50$, and $N=500000$ for $h_n=100$. 
 
 
 \begin{figure}
@@ -379,7 +379,7 @@ The speedup curves in Figures~\ref{fig:stencil_query_old_and_new} and \ref{fig:s
 %TODO: repeat cvt_hn_speedup but get the number of nodes per cell.
 \subsection{Impact on SpMV}
 
-Based on evidence so far, the fixed-grid method is not a big winner against the $k$-D Tree, but it does eke out a small victory with the right choice of $h_n$. The reality is that stencil generation only occurs once, and the difference between $k$-D Tree and fixed-grid is easily amortized by iterations during the bulk of the RBF-FD application phase. However, as Figure~\ref{fig:spmv_impact_rg} illustrates, the fixed-grid method includes another longer lasting benefit. Namely, the Sparse Matrix-Vector Multiply (SpMV)---the major overhead in RBF-FD applications---benefits positively due to the reordering that occurs during stencil generation. Reordering cells improves locality of nearby nodes and associated values, and leads to up to 5x speedup in the SpMV for random node distributions. 
+Based on evidence so far, the fixed-grid method is not a big winner against the $k$-D Tree, but it does eke out a small victory with the right choice of $h_n$. The reality is that stencil generation only occurs once, and the difference between $k$-D Tree and fixed-grid is easily amortized by iterations during the bulk of the RBF-FD application phase. However, as Figure~\ref{fig:spmv_impact_rg} illustrates, the fixed-grid method includes another longer lasting benefit. Namely, the Sparse Matrix-Vector Multiply (SpMV)---the major overhead in RBF-FD applications---benefits positively due to the reordering that occurs during stencil generation. Reordering cells improves locality of nearby nodes and associated values, and leads to up to 5x speedup in the SpMV compared to random node distributions. 
 
 Regular grid and icosahedral sphere test cases in Figure~\ref{fig:spmv_impact_rg} see no more than 5\% improvement, which is unsurprising as their nodes are previously sorted. CVT and MD node sets, however, see a maximum speedup of 5x and 1.4x respectively. Furthermore, none of the test cases result in SpMV slowdown. Figure~\ref{fig:spmv_vs_hn} demonstrates the impact on SpMV as a function of $h_n$ for the $N=10^6$ CVT test case. The results show that even a coarse fixed-grid ($h_n \ge 40$) is capable of achieving the spatial locality of data that results in 5x faster SpMV. The combined results of 2x faster stencils and 5x faster SpMV make a case for the use of a fixed-grid query as a general safety net to precondition RBF-FD when properties of the input grid are unknown. 
 
@@ -409,7 +409,7 @@ Regular grid and icosahedral sphere test cases in Figure~\ref{fig:spmv_impact_rg
 
 \section{Alternative Orderings}
 
-As previously mentioned, the choice of space filling curve influences the sparsity pattern of differentiation matrices, which in turn impacts cache effects. The use of $Z$-ordering (Figure~\ref{fig:space_filling_curves}) for potential benefits on memory access is a common recommendation in fixed-grid methods (see e.g., the suggestions by \cite{Johnson2011,Green2010,Krog2010} and implementations in \cite{Goswami2010, MellorCrummey2001}). Under raster-ordering, cells are traversed with priority on one dimension. The resulting layout only has adjacent cells along that one dimension consecutive in memory. Other approaches, like $Z$-ordering, traverse cells by alternating dimensions/directions and increase locality of data in multiple dimensions. 
+As previously mentioned, the choice of space filling curve influences the sparsity pattern of differentiation matrices, which in turn impacts cache effects. The use of $Z$-ordering (Figure~\ref{fig:space_filling_curves}) for potential benefits on memory access is a common recommendation in fixed-grid methods (see e.g., the suggestions by \cite{Johnson2011,Green2010,Krog2010} and implementations in \cite{Goswami2010, MellorCrummey2001}). Under raster-ordering, cells are traversed along one coordinate dimension. The resulting layout only has adjacent cells along that one dimension consecutive in memory. Other approaches, like $Z$-ordering, traverse cells by alternating coordinate directions and increase locality of data in multiple dimensions. 
 
 This section investigates the potential benefits of $Z$-ordering and various other space filling curves implemented as part of the original MATLAB fixed-grid prototype (\cite{BolligRBFFixedGrid}). Examples of the tested curves are presented in Figure~\ref{fig:orderings}. Here each node correlates to a fixed-grid cell, and curves start at coordinates $(0,0)$. 
 
@@ -504,7 +504,7 @@ interleave(X,Y,Z) = ((d_x \ll 2) \mid (d_y \ll 1)) \mid d_z.
 \end{align}
 Equations~\ref{eq:interleave2d} and \ref{eq:interleave3d} can be used as hash functions to produce a vast number of space filling curves (see \cite{Stocco2009}).
 
-By default, Equation~\ref{eq:interleave2d} results in the $Z$-ordering in Figures~\ref{fig:space_filling_curves} and \ref{fig:orderings}. Consider for example:
+The interleaving operation applied to input $(X, Y)$ in Equation~\ref{eq:interleave2d} results in the $Z$-ordering in Figures~\ref{fig:space_filling_curves} and \ref{fig:orderings}. Consider for example:
 \begin{align}
 (c_x,c_y) & = (5, 3) = (0101_2, 0011_2) \nonumber \\
 (d_x,d_y) & =  ({\color{red}0}0{\color{red}0}1{\color{red}0}0{\color{red}0}1_2, {\color{red}0}0{\color{red}0}0{\color{red}0}1{\color{red}0}1_2) \nonumber \\
@@ -513,7 +513,7 @@ interleave(c_x, c_y) & = ( 00100111_2 ) = 39. \nonumber
 % 0000000100010
 %  000000000101
 % 0000000100111 = 32 + 7
-The mapped $Z$-index of 39 can be verified by counting the number of steps from  $(0,0)$ to $(5,3)$ on the $Z$-order curve in Figure~\ref{fig:orderings}. 
+The mapped $Z$-index of 39 can be verified by counting the number of steps from  $(0,0)$ to $(5,3)$ on the $Z$-order curve in Figure~\ref{fig:orderings} (``Morton (Z) Order"). 
 
 The $X$- and $U$- orders shown in Figure~\ref{fig:orderings} also result from Equation~\ref{eq:interleave2d} with only slight modifications to the input. Table~\ref{tbl:orderings} provides a comparison of orderings and the operators/inputs in 2-D and 3-D that produce them. The $U$ and $X$ orderings depend on a bit-wise XOR operator, $\oplus$, to combine coordinates before interleaving. 
 
@@ -551,10 +551,10 @@ Often, interleaved cell coordinates near the boundaries of the domain do not pro
 
 \subsection{Bandwidth Reduction and Reverse Cuthill-McKee} 
 
-The purpose of reordering nodes/cells is to improve memory access patterns. If condensing non-zeros of a sparse matrix achieves this, then the ideal case arises when $n$ non-zeros occupy the first $n$ diagonals of the matrix (including the main diagonal) for all rows. In terms of stencils on a grid, this ideal case corresponds to all nodes on a 1-D line connected to their left and right nearest neighbors. In higher dimensions, reproducing the ideal structure requires one to neglect spatially nearest neighbors, except in cases of very low resolution or small stencil sizes, and select neighbors by following a space filling curve left and right. Stencils in 2-D or 3-D constructed through $k$-NN (or $k$-ANN) queries result in a sparsity pattern with gaps between non-zeros. In the worst case, matrices would have non-zeros in each row spaced as far apart as possible while maintaining the appropriate connectedness of the adjacency graph. 
+The purpose of reordering nodes/cells is to improve memory access patterns. If condensing non-zeros of a sparse matrix achieves this, then the ideal case arises when $n$ non-zeros occupy the first $n-1$ off-diagonals nearest the main diagonal of the matrix (as well as the main diagonal) for all rows. In terms of stencils on a grid, this ideal case corresponds to all nodes on a 1-D line connected to their left and right nearest neighbors. In higher dimensions, reproducing the ideal structure requires one to neglect spatially nearest neighbors, except in cases of very low resolution or small stencil sizes, and select neighbors by following a space filling curve left and right. Stencils in 2-D or 3-D constructed through $k$-NN (or $k$-ANN) queries result in a sparsity pattern with gaps between non-zeros. In the worst case, matrices would have non-zeros in each row spaced as far apart as possible while maintaining the appropriate connectedness of the adjacency graph. 
 
 
-As a measure of how well condensed non-zeros are, the \emph{bandwidth} of a matrix, $A$, is defined as (\cite{Cuthill1969, LiuSherman1976}): 
+One measure of non-zeros density is the \emph{bandwidth} of a matrix, $A$, defined as (\cite{Cuthill1969, LiuSherman1976}): 
 \begin{align*}
 bw(A) = \max\{|i - j| + 1 : A_{i,j} \neq 0\}.
 \end{align*}
@@ -566,11 +566,11 @@ P A P^T
 \end{align*}
 reorders the matrix and reduces the bandwidth of $A$. A variety of \emph{bandwidth reduction} algorithms exist with unique approaches for the construction of $P$ (see e.g., \cite{Gibbs1976, LiuSherman1976, MellorCrummey2001}).  In contrast to the space filling curves discussed above, bandwidth reduction algorithms are applied \emph{after} stencils are generated in order to operate on the differentiation matrix and corresponding adjacency graph. 
 
-The effect pre- and post-multiplying $A$ by $P$ is equivalent to reindexing nodes and and updating all stencil connections to the new numbering. In practice, rather than construct a full permutation matrix $P$, which has exactly one 1 per row and per column, it is common to represent $P$ as a vector where each entry indicates the column location of the 1. In that case the vector elements reference the original node ordering, and the indices of those elements provide the new ordering. 
+The effect pre- and post-multiplying $A$ by $P$ is equivalent to reindexing nodes and and updating all stencil connections to the new numbering. In practice, rather than construct a full permutation matrix $P$, which has exactly one one per row and per column, it is common to represent $P$ as a vector where each entry indicates the column location of the nonzero. In that case the vector elements reference the original node ordering, and the indices of those elements provide the new ordering. 
 
-The most popular methods for bandwidth reduction are Cuthill-McKee (CM) algorithms \cite{Cuthill1969, LiuSherman1976}. In particular this work is concerned with the \emph{Reverse Cuthill-McKee} (RCM) variant. The authors of \cite{LiuSherman1976} show that, in comparison to regular CM, the RCM algorithm offers better conditioning of $PAP^T$ for reduced fill-in and reduced computation during matrix decompositions. Although fill-in is not a concern in this work, the RCM variant is attained at no extra cost.
+The most popular methods for bandwidth reduction are Cuthill-McKee (CM) algorithms \cite{Cuthill1969, LiuSherman1976}. In particular this work is concerned with the \emph{Reverse Cuthill-McKee} (RCM) variant. The authors of \cite{LiuSherman1976} show that, in comparison to regular CM, the RCM algorithm offers better conditioning of $PAP^T$ for reduced fill-in and reduced computation during matrix decompositions (e.g., LU decomposition on some sparse matrices results in dense triangle factors). Although fill-in is not a concern in this work, the RCM variant is attained at no extra cost in comparison to the standard CM algorithm.
 
-At a high level, CM methods start by selecting a node in the adjacency graph with the lowest degree (i.e., fewest non-zeros per row in the matrix). From that node, a breadth-first traversal begins, passing through all connected neighbors in order from least to greatest degree. If nodes have the same degree, as is the situation for RBF-FD with stencil size, $n$, then ties are broken arbitrarily. The original indices for visited nodes are pushed onto a queue, $r$. Another queue is maintained to catalogue previously traversed nodes and prevent the process from doubling back on itself. In the event that the adjacency graph has multiple disconnected sub-graphs, the algorithm exhausts the first sub-graph before beginning the next; as always, beginning with the lowest degree node available. 
+At a high level, CM methods start by selecting a node in the adjacency graph with the lowest degree (i.e., fewest non-zeros per row in the matrix). From that node, a breadth-first traversal begins, passing through all connected neighbors in order from least to greatest degree. If nodes have the same degree, as is the situation for RBF-FD with stencil size, $n$, then ties are broken arbitrarily with random selection. Since all RBF-FD stencils are assumed to have the same degree,  The original indices for visited nodes are pushed onto a queue, $r$. Another queue is maintained to catalogue previously traversed nodes and prevent the process from doubling back on itself. In the event that the adjacency graph has multiple disconnected sub-graphs, the algorithm exhausts the first sub-graph before beginning the next; as always, beginning with the lowest degree node available. 
 
 CM methods produce $r$ as the vector representation of $P$. The RCM variant differs from CM by reversing the order of $r$ so that rows corresponding to the last traversed nodes are at the top of $PAP^T$. 
 
